@@ -1,3 +1,6 @@
+Oct 22, 2002: Ludwig Nussel <l-n@users.sourceforge.net>
+- use optimal width for arguments editor
+
 Oct 21, 2002: Alex Burger <alex@users.sourceforge dot net>
 - Added tooltips to custom args editor
 - Update docs
